log/iptables-logging.txt
TRACE: raw:PREROUTING:rule:1 IN=eth0 OUT= MAC=52:54:00:00:00:01:52:54:00:6c:4a:cf:08:00 SRC=192.168.122.1 DST=192.168.122.2 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=52104 DF PROTO=ICMP TYPE=8 CODE=0 ID=23243 SEQ=6
TRACE: raw:PREROUTING:policy:2 IN=eth0 OUT= MAC=52:54:00:00:00:01:52:54:00:6c:4a:cf:08:00 SRC=192.168.122.1 DST=192.168.122.2 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=52104 DF PROTO=ICMP TYPE=8 CODE=0 ID=23243 SEQ=6
TRACE: mangle:PREROUTING:policy:1 IN=eth0 OUT= MAC=52:54:00:00:00:01:52:54:00:6c:4a:cf:08:00 SRC=192.168.122.1 DST=192.168.122.2 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=52104 DF PROTO=ICMP TYPE=8 CODE=0 ID=23243 SEQ=6
TRACE: mangle:INPUT:policy:1 IN=eth0 OUT= MAC=52:54:00:00:00:01:52:54:00:6c:4a:cf:08:00 SRC=192.168.122.1 DST=192.168.122.2 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=52104 DF PROTO=ICMP TYPE=8 CODE=0 ID=23243 SEQ=6
TRACE: filter:INPUT:rule:1 IN=eth0 OUT= MAC=52:54:00:00:00:01:52:54:00:6c:4a:cf:08:00 SRC=192.168.122.1 DST=192.168.122.2 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=52104 DF PROTO=ICMP TYPE=8 CODE=0 ID=23243 SEQ=6
TRACE: filter:INPUT:policy:2 IN=eth0 OUT= MAC=52:54:00:00:00:01:52:54:00:6c:4a:cf:08:00 SRC=192.168.122.1 DST=192.168.122.2 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=52104 DF PROTO=ICMP TYPE=8 CODE=0 ID=23243 SEQ=6 MARK=0x1
TRACE: raw:OUTPUT:rule:1 IN= OUT=eth0 SRC=192.168.122.2 DST=192.168.122.1 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=50186 PROTO=ICMP TYPE=0 CODE=0 ID=23243 SEQ=6
TRACE: raw:OUTPUT:policy:2 IN= OUT=eth0 SRC=192.168.122.2 DST=192.168.122.1 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=50186 PROTO=ICMP TYPE=0 CODE=0 ID=23243 SEQ=6
TRACE: mangle:OUTPUT:policy:1 IN= OUT=eth0 SRC=192.168.122.2 DST=192.168.122.1 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=50186 PROTO=ICMP TYPE=0 CODE=0 ID=23243 SEQ=6
TRACE: filter:OUTPUT:policy:1 IN= OUT=eth0 SRC=192.168.122.2 DST=192.168.122.1 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=50186 PROTO=ICMP TYPE=0 CODE=0 ID=23243 SEQ=6
TRACE: mangle:POSTROUTING:policy:1 IN= OUT=eth0 SRC=192.168.122.2 DST=192.168.122.1 LEN=84 TOS=0x00 PREC=0x00 TTL=64 ID=50186 PROTO=ICMP TYPE=0 CODE=0 ID=23243 SEQ=6
